# ha-closure-analysis

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  _i_b_m___e_i_s_2authenticate_8c.html  _i_b_m___e_i_s_2authenticate_8c.js  _i_b_m___e_i_s_2authenticate_8c__incl.map  _i_b_m___e_i_s_2authenticate_8c__incl.md5  _i_b_m___e_i_s_2authenticate_8h.html  _i_b_m___e_i_s_2authenticate_8h.js  _i_b_m___e_i_s_2authenticate_8h__dep__incl.map  _i_b_m___e_i_s_2authenticate_8h__dep__incl.md5  _i_b_m___e_i_s_2authenticate_8h__incl.map  _i_b_m___e_i_s_2authenticate_8h__incl.md5  _i_b_m___e_i_s_2authenticate_8h_source.html  _r_e_a_d_m_e_8md.html  _ubidots_2authenticate_8c.html  _ubidots_2authenticate_8c.js  _ubidots_2authenticate_8c__incl.map  _ubidots_2authenticate_8c__incl.md5  _ubidots_2authenticate_8h.html  _ubidots_2authenticate_8h.js  _ubidots_2authenticate_8h__dep__incl.map  _ubidots_2authenticate_8h__dep__incl.md5  _ubidots_2authenticate_8h__incl.map  _ubidots_2authenticate_8h__incl.md5  _ubidots_2authenticate_8h_source.html  _willy_weather_2authenticate_8c.html  _willy_weather_2authenticate_8c.js  _willy_weather_2authenticate_8c__incl.map  _willy_weather_2authenticate_8c__incl.md5  _willy_weather_2authenticate_8h.html  _willy_weather_2authenticate_8h.js  _willy_weather_2authenticate_8h__dep__incl.map  _willy_weather_2authenticate_8h__dep__incl.md5  _willy_weather_2authenticate_8h__incl.map  _willy_weather_2authenticate_8h__incl.md5  _willy_weather_2authenticate_8h_source.html  (+742 more)
.github/workflows/: cmake.yml  main.yml
api/: db.go  go.mod  go.sum  main.go  router.go  routes.go
api/routes/: harvest_areas.go  locations.go  program_status.go  weather.go
charts/: precipitation.gnuplot
db/init.d/: init_db.sql
doxygen-1.9.2/: README
doxygen-1.9.2/html/: formula.repository
doxygen-1.9.2/html/examples/diagrams/html/: class_c.html  class_d.html  class_e.html  diagrams__a_8h.html  diagrams__b_8h.html  diagrams__c_8h.html  diagrams__d_8h.html  diagrams__e_8h.html
doxygen-1.9.2/html/examples/docstring/html/: annotated.html  classdocstring_1_1PyClass-members.html  classdocstring_1_1PyClass.html  classes.html  docstring_8py.html  functions.html  functions_func.html  namespacedocstring.html  namespaces.html
doxygen-1.9.2/html/examples/pyexample/html/: annotated.html  classes.html  classpyexample_1_1PyClass-members.html  classpyexample_1_1PyClass.html  functions.html  functions_func.html  functions_vars.html  namespacepyexample.html  namespaces.html
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: current-conditions.tsx  datasources.tsx  harvest-status.tsx  latest-news.tsx  map-region.tsx  map.css  navbar.tsx  region-information.css  report-error.tsx  windymap.tsx
frontend/src/components/maps/: map-region.tsx  map-regions.tsx  map-windy.tsx  map.css
frontend/src/components/navbar/: navbar.tsx
frontend/src/components/oyster-regions/: harvest-status.tsx  latest-news.tsx
frontend/src/components/utils/: report-error.tsx
frontend/src/components/weather/: current-conditions.tsx  water-chart.tsx  water-table.tsx
frontend/src/views/: clyderiver.tsx  home.tsx
include/: food_auth.h  ftp.h  http.h  ibm_ems.h  log.h  main.h  severity_index.h  transform.h  ubidots.h  utils.h  w_weather.h
include/BOM/: historical_weather.h  stations.h
include/FoodAuthority/: food_auth.h  harvest_area.h  harvest_areas.h
include/IBM_EIS/: authenticate.h  timeseries.h
include/IBM_EMS/: authenticate.h  precipitation.h  timeseries.h
include/Ubidots/: authenticate.h  devices.h  ubidots.h
include/WillyWeather/: authenticate.h  forecast.h  location.h  precipitation.h  tide.h  w_weather.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  (+44 more)
src/: food_auth.c  forecast.c  ftp.c  http.c  ibm_ems.c  log.c  main.c  severity_index.c  transform.c  ubidots.c  utils.c  w_weather.c
src/BOM/: historical_weather.c  stations.c
src/FoodAuthority/: food_auth.c  harvest_area.c  harvest_areas.c
src/IBM_EIS/: authenticate.c  timeseries.c
src/IBM_EMS/: authenticate.c  ibm_ems.c  precipitation.c  timeseries.c
src/Ubidots/: authenticate.c  devices.c  ubidots.c
src/WillyWeather/: authenticate.c  location.c  precipitation.c  tide.c  w_weather.c
templates/json/: site.json
widgets/: floodrisk.js  index.html  style.css
